Remove dependency on the medium editor. Markdown all the way

--- a/src/Assets/sass/screen.scss
+++ b/src/Assets/sass/screen.scss
@@ -1,4 +1,3 @@
-@import 'vendor/medium-editor/medium-editor';
-@import 'vendor/medium-editor-insert/medium-editor-insert-plugin';
+@import '../../../node_modules/materialize-css/sass/materialize';
 @import 'app/navbar';
 @import 'app/components';
