--- a/src/Assets/templates/home.html
+++ b/src/Assets/templates/home.html
@@ -1,9 +1,10 @@
 <div class="row">
-  <div class="col-md-8">
-    <div>Article Title</div>
+  <div class="col l8">
+    <input type="text" ng-model="article.title" class="form-control">
+
     <div contenteditable="true" class="editable">Article Body</div>
   </div>
-  <div class="col-md-4">
+  <div class="col l4">
     Tags and other utilities
   </div>
 </div>
