--- a/src/Assets/sass/app/_components.scss
+++ b/src/Assets/sass/app/_components.scss
@@ -3,3 +3,38 @@
     max-width: 100%;
     padding: 0 0.75rem;
 }
+.in-editor-title-row{
+    margin-top: 20px;
+    padding: 0 10px;
+}
+.in-editor-body-row{
+    padding: 0 10px;
+}
+.broken-text{
+  word-wrap: break-word;
+}
+#editor-dropzone{
+    border: 2px dashed #0087F7;
+    border-radius: 5px;
+    background: white;
+    height: 225px;
+    width: 400px;
+    margin: 0 auto;
+    font-size: 16px;
+    text-align: center;
+    padding-top: 35px;
+    color: #ccc;
+    font-style: italic;
+    margin-top: 30px;
+}
+.article-photo-row{
+  margin-top: 50px;
+  border-top: 1px solid #ccc;
+  padding-top: 25px;
+}
+.article-body{
+  img{
+    max-width: 100%;
+    height: auto;
+  }
+}
