--- a/src/Assets/sass/app/_components.scss
+++ b/src/Assets/sass/app/_components.scss
@@ -1,3 +1,6 @@
+.tabs{
+  overflow-x: hidden;
+}
 .in-content-wrapper{
       width: 100%;
     max-width: 100%;
@@ -37,4 +40,15 @@
     max-width: 100%;
     height: auto;
   }
+}
+.metadata-section-name{
+  color: grey;
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-top: 10px;
+}
+.article-title{
+  font-family: Helvetica;
+  font-weight: bold;
+  margin-top: 5px;
 }
